# rag-experiments

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: claude-code-review.yml
templates/: CODE_REVIEW_CHECKLIST.md  IMPLEMENTATION_PLAN.md
tests/: test_main.py
